<?xml version="1.0" encoding="utf-8"?>
<tabs xmlns:android="http://schemas.android.com/apk/res/android">
    <tab
        android:id="@+id/nav_home"
        drawable="@drawable/ic_home_svgrepo_com"
        text="@string/home" />

    <tab
        android:id="@+id/notificationFragment"
        drawable="@drawable/ic_notifications_none_black_24dp"
        text="@string/notification" />

    <tab
        android:id="@+id/addFragment"
        drawable="@drawable/ic_add_circle_outline_black_24dp"
        text="@string/add" />

    <tab
        android:id="@+id/followFragment"
        drawable="@drawable/ic_magnifying_glass_svgrepo_com"
        text="@string/search" />

    <tab
        android:id="@+id/profileFragment"
        drawable="@drawable/ic_noun_user_829921"
        text="@string/profile" />

</tabs>