<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_svgrepo_com"
        android:title="@string/home" />

    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_notifications_none_black_24dp"
        android:title="@string/notification" />

    <item
        android:id="@+id/addFragment"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:title="@string/add" />

    <item
        android:id="@+id/followFragment"
        android:icon="@drawable/ic_magnifying_glass_svgrepo_com"
        android:title="@string/search" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_noun_user_829921"
        android:title="@string/profile" />
</menu>