<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/addFragment"
            android:icon="@drawable/ic_baseline_post_add_24"
            android:title="@string/add" />
        <item
            android:id="@+id/notificationFragment"
            android:icon="@drawable/ic_baseline_notifications_24"
            android:title="@string/notification" />
        <item
            android:id="@+id/followFragment"
            android:icon="@drawable/ic_baseline_person_add_24"
            android:title="@string/search" />
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_baseline_person_outline_24"
            android:title="@string/profile" />

    </group>


</menu>